# fanabot

./: CMakeLists.txt  lidar_reading.cpp  lidar_reading.h  main.cpp  main.h  navigation.cpp  navigation.h  server.cpp
common/: CMakeLists.txt  shmem.cpp  shmem.h
lidar/: CMakeLists.txt  lidar.cpp
map/: main.cpp
navigation/: CMakeLists.txt  angle.cpp  angle.h  map.h  navigation.cpp  wheel.cpp  wheel.h
server/: CMakeLists.txt  main.h  server.cpp
